--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toxicdev/citizen",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.2-alpha.0",
   "description": "Example for a Discord bot with discord.js",
   "main": "src/app.ts",
   "repository": "https://github.com/HalloSouf/discordjs-example.git",
@@ -24,12 +24,14 @@
     "dotenv": "^16.3.1",
     "moment": "^2.29.4",
     "glob": "^10.3.10",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "qs": "^6.11.2"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "@types/qs": "^6.9.11",
     "eslint": "^8.28.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
