--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "moment": "^2.29.4",
     "glob": "^10.3.10",
     "mongoose": "^8.0.3",
-    "qs": "^6.11.2"
+    "qs": "^6.11.2",
+    "request": "^2.88.2",
+    "typed-emitter": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "@types/request": "^2.48.12",
     "@types/qs": "^6.9.11",
     "eslint": "^8.28.0",
     "nodemon": "^3.0.1",
